ProjectUtils: Added getJavaFXClassPaths() Project, RunApp: Added support for BuildFile IncludeJavaFX